[VPS-021] Fix cropping of scene navigator on smaller resolutions

--- a/frontend/src/styling/SceneNavigator.module.scss
+++ b/frontend/src/styling/SceneNavigator.module.scss
@@ -1,5 +1,4 @@
 .sceneNavigator {
-  width: 10vw;
   background-color: #f0f0f0;
   filter: drop-shadow(2.5px 0 5px rgba(0, 0, 0, 0.1));
   padding: 1rem 1rem 1rem 2rem;
